# Eratosthenes-sieve

./: CMakeLists.txt
inc/: sieve.h
src/: main.c  sieve.c
tests/end_to_end/: test_002.out  test_005.data  test_005.out  test_010.out  testrun.sh
tests/unit/: CMakeLists.txt  test.c
